--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h1>哈哈</h1>
+    <ul>
+        <li><a href="#">a</a></li>
+        <li><a href="#">b</a></li>
+        <li><a href="#">c</a></li>
+    </ul>
     <h2>咩   oi</h2>
+    <p>qwqwqw</p>
+    <p><a href="https:baidu.com">baidu</a></p>
+    <img src="image/maltese.png">
 </body>
 </html>
