--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>哟</title>
+    <link rel="stylesheet" href="site.css">
 </head>
 <body>
+    <header>
     <h1>哈哈</h1>
     <ul>
         <li><a href="#">a</a></li>
         <li><a href="#">b</a></li>
         <li><a href="#">c</a></li>
     </ul>
-    <h2>咩   oi</h2>
+    </header>
+
+    <main>
+        <section>
+            <h2 style="color:red">咩   oi</h2>
     <p>qwqwqw</p>
-    <p><a href="https:baidu.com">baidu</a></p>
+    <p><a href="https://baidu.com">baidu</a></p>
+    <p><a href="https://youtube.com">youtube</a></p>
     <img src="image/maltese.png">
+        </section>
+    
+    </main>
+
+    <footer>
+        not copyright 2077 no rights reserved
+    </footer>
 </body>
 </html>
